<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/layout_bg"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/introduction_container"
        android:foreground="@drawable/black_transparent_black"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@drawable/novi_bg"
        android:layout_width="0dp"
        android:layout_height="@dimen/_140sdp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:src="@drawable/icon_hi"
            android:adjustViewBounds="true"
            android:layout_gravity="center_vertical"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/login_intro"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:fontFamily="@font/font_child"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/_22sdp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_view_phone_number_asked"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="7dp"
        android:fontFamily="@font/font_child"
        android:text="@string/qus_phone_number"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introduction_container"/>

    <LinearLayout
        android:id="@+id/phone_input_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/bg_phone_input"
        android:paddingHorizontal="8dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"

        app:layout_constraintTop_toBottomOf="@id/text_view_phone_number_asked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_showFlag="true"
            app:ccp_showPhoneCode="true"
            app:ccp_contentColor="@color/white"
            app:ccp_textSize="14sp"
            app:ccp_arrowColor="@color/white"
            app:ccp_autoDetectCountry="true"
            app:ccpDialog_backgroundColor="@color/layout_bg"
            app:ccpDialog_cornerRadius="10dp"
            app:ccpDialog_textColor="@color/white"
            app:ccpDialog_keyboardAutoPopup="false"
            app:ccpDialog_fastScroller_bubbleColor="@color/white"
            app:ccpDialog_fastScroller_handleColor="@color/white"/>





        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="8dp"
            android:background="#DDDDDD"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/mobile_number_asking"
            android:background="@null"
            android:inputType="phone"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:maxLength="15"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:textColorHint="#9E9E9E">

            <requestFocus />

        </EditText>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_otp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_marginTop="14dp"
        android:background="@drawable/button_background_enable"
        android:text="@string/get_otp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_input_container" />

    <ProgressBar
        android:id="@+id/progress_get_otp"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:indeterminateTint="#FFFFFF"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_get_otp"
        app:layout_constraintEnd_toEndOf="@+id/btn_get_otp"
        app:layout_constraintStart_toStartOf="@+id/btn_get_otp"
        app:layout_constraintTop_toTopOf="@+id/btn_get_otp" />


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:checked="true"
        android:text="@string/i_agree_to_the_terms_conditions"
        android:textColor="@color/color_white_low"
        android:textSize="14sp"
        app:buttonTint="@color/white"
        app:checkMarkTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_get_otp"/>



</androidx.constraintlayout.widget.ConstraintLayout>